@@ -1,22 +1,24 @@
 package MicroServicio.Stock.application.mapper.request;
 
+import MicroServicio.Stock.application.dto.request.ProductRequest;
 import MicroServicio.Stock.domain.models.Brand;
 import MicroServicio.Stock.domain.models.Category;
-import MicroServicio.Stock.domain.models.Article;
-import MicroServicio.Stock.application.dto.request.ArticleRequest;
+import MicroServicio.Stock.domain.models.Product;
 import org.mapstruct.Mapper;
 import org.mapstruct.Mapping;
 import org.mapstruct.Named;
 
+import java.util.Collections;
 import java.util.List;
 import java.util.Set;
 import java.util.stream.Collectors;
 
 @Mapper(componentModel = "spring")
-public interface ArticleRequestMapper {
+public interface ProductRequestMapper {
+
     @Mapping(source = "brandId", target = "brand", qualifiedByName = "toBrand")
     @Mapping(source = "categoryIds", target = "categories", qualifiedByName = "toCategories")
-    Article toArticle(ArticleRequest request);
+    Product toProduct(ProductRequest request);
 
     @Named("toBrand")
     default Brand toBrand(Long brandId) {
@@ -31,7 +33,7 @@ public interface ArticleRequestMapper {
     @Named("toCategories")
     default List<Category> toCategories(Set<Long> categoryIds) {
         if (categoryIds == null) {
-            return null;
+            return Collections.emptyList();
         }
         return categoryIds.stream()
                 .map(id -> {
@@ -39,6 +41,6 @@ public interface ArticleRequestMapper {
                     category.setId(id);
                     return category;
                 })
-                .collect(Collectors.toList());
+                .toList();
     }
 }
